# upgi_mvp

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
API/: UPGI_API_v1.postman_collection.json  home.html  requirements.txt
API/app/: config.py  database.py  dependencies.py  main.py
API/app/core/: exceptions.py  security.py
API/app/db/: base.py  models.py
API/doc_api/: Contratos_API.md  README.md  entidades_reglas.md  parafraseo.md  requisitos_no_funcionales.md  usecase.md
app/: config.py
app/core/: config.py  database.py
documentacion/: INFORME_PRUEBAS.md  MANUAL_TECNICO.md  VERIFICACION_REQUISITOS.md
src/: App.tsx  main.tsx  styles.css  types.ts
src/components/admin/: AdminSearchBox.tsx  AdminSidebar.tsx  AdminTopbar.tsx  BarChartPlaceholder.tsx  DashboardWelcomeAlert.tsx  EquipoForm.tsx  HorariosCanchasSection.tsx  HorariosTable.tsx  InventarioSection.tsx  InventarioStats.tsx  NotificationsMenu.tsx  PaymentStatusBadge.tsx  ReservaCell.tsx  ReservasPorSemanaSection.tsx  ReservationModal.tsx  StatCard.tsx  StatsSection.tsx  StatusLegend.tsx
src/components/auth/: LoginForm.tsx  LoginFormSection.tsx  LoginHeaderSection.tsx  RegisterForm.tsx
src/components/home/: FeatureCard.tsx  HeroSection.tsx  WelcomeCtaSection.tsx
src/components/layout/: Footer.tsx  MainLayout.tsx  Navbar.tsx
src/lib/: api.ts  session.ts
src/pages/: AdminDashboardPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ReservasPage.tsx
tests/core/: test_config.py  test_database.py
(+34 files in other folders)
