[tool.poetry]
name = "upgi-mvp"
version = "0.1"
description = "backend para una api"
authors = ["sould-bit <jnonstiiven@gmail.com>"]
license = "comercial"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12"
annotated-types = "0.7.0"
anyio = "4.5.2"
certifi = "2025.7.14"
click = "8.1.8"
dnspython = "2.6.1"
email-validator = "2.2.0"
exceptiongroup = "1.3.0"
fastapi = "0.116.1"
fastapi-cli = "0.0.8"
fastapi-cloud-cli = "0.1.5"
greenlet = "3.2.3"
h11 = "0.16.0"
httpcore = "1.0.9"
httptools = "0.6.4"
httpx = "0.28.1"
idna = "3.10"
jinja2 = "3.1.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pydantic-core = "2.27.2"
pygments = "2.19.2"
python-dotenv = "1.0.1"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
rich = "14.1.0"
rich-toolkit = "0.14.9"
rignore = "0.6.4"
sentry-sdk = "2.34.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.42"
sqlmodel = "0.0.24"
starlette = "0.44.0"
typer = "0.16.0"
typing-extensions = "4.13.2"
urllib3 = "2.2.3"
uvicorn = "0.33.0"
uvloop = "0.21.0"
watchfiles = "0.24.0"
websockets = "13.1"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
